soma animations for contact page and tefljobs page

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,8 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="index.html"><img class="header__menu_img" src="img/logo2.png" alt=""></a>
+                        <a class="navbar-brand" href="index.html"><img class="header__menu_img" src="img/logo2.png"
+                                alt=""></a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -71,7 +72,7 @@
                 </nav>
             </div>
         </div>
-        <div class="header__fon">
+        <div class="header__fon wow bounceIn" data-wow-duration="2s">
             <div class="container text-center">
                 <div class="row row-ml justify-content-center">
                     <div class="col-lg-8 col-md-10 col-sm-12 col-12 col-pd">
@@ -90,7 +91,7 @@
                 <div class="col-lg-4 col-md-3 col-12 col-pd">
                     <div class="main__login_icon">
                         <div class="main__login_icon-box d-flex">
-                            <i class="main__login_icon-box_icon fas fa-envelope"></i>
+                            <i class="main__login_icon-box_icon fas fa-envelope wow  fadeIn" data-wow-duration="3s"></i>
                             <div class="text">
                                 <p class="text_email">Email</p>
                                 <a class="main__login_icon-box_link"
@@ -98,7 +99,7 @@
                             </div>
                         </div>
                         <div class="main__login_icon-box d-flex">
-                            <i class="main__login_icon-box_icon fab fa-telegram"></i>
+                            <i class="main__login_icon-box_icon fab fa-telegram wow  fadeIn" data-wow-duration="3s"></i>
                             <div class="text">
                                 <p class="text_email">Telegram</p>
                                 <a class="main__login_icon-box_link"
@@ -106,14 +107,16 @@
                             </div>
                         </div>
                         <div class="main__login_icon-box d-flex">
-                            <i class="main__login_icon-box_icon fab fa-facebook-square"></i>
+                            <i class="main__login_icon-box_icon fab fa-facebook-square wow  fadeIn"
+                                data-wow-duration="3s"></i>
                             <div class="text">
                                 <p class="text_email">Facebook</p>
                                 <a class="main__login_icon-box_link" href="#">INTESOLworldwide</a>
                             </div>
                         </div>
                         <div class="main__login_icon-box d-flex">
-                            <i class="main__login_icon-box_icon fas fa-phone-square-alt"></i>
+                            <i class="main__login_icon-box_icon fas fa-phone-square-alt wow  fadeIn"
+                                data-wow-duration="3s"></i>
                             <div class="text d-flex flex-column">
                                 <p class="text_email">Contact us</p>
                                 <a class="main__login_icon-box_link" href="#">+99897 753 45 65</a>
@@ -141,7 +144,7 @@
                                         placeholder="Message"></textarea>
                                 </div>
                             </div>
-                            <button class="main__login-input_box_button">send <i
+                            <button class="main__login-input_box_button wow flipInX" data-wow-duration="2s">send <i
                                     class="main__login-input_box_button_icon fas fa-arrow-right"></i></button>
                         </form>
                     </div>
@@ -173,9 +176,9 @@
                     </div>
                 </div>
             </div>
-            <button class="footer__block_box_button">Contact Us<i
+            <button class="footer__block_box_button wow fadeInRightBig" data-wow-duration="2s">Contact Us<i
                     class="footer__block_box_button_icon fas fa-arrow-right"></i></button>
-            <div class="footer__block_img">
+            <div class="footer__block_img wow rotateIn" data-wow-duration="3s">
                 <img class="footer__block_img_logo" src="img/logo2.png" alt="">
             </div>
             <div class="footer__block_icon d-flex">
@@ -190,21 +193,25 @@
                 </div>
             </div>
         </div>
-        <div class="footer__menu">
+        <div class="footer__menu wow zoomInDown" data-wow-duration="2s">
             <div class="container">
                 <nav class="footer__menu_nav">
                     <ul class="footer__menu_nav_ul d-flex justify-content-around flex-wrap">
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="index.html">Home</a></li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
+                                href="index.html">Home</a></li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Courses</a>
                         </li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="TeflJobs.html">TEFL Jobs</a>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
+                                href="TeflJobs.html">TEFL Jobs</a>
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">About</a>
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="#">Accreditation</a></li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="staff.html">Meet Our Staff</a></li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="reviews.html">Reviews</a>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="staff.html">Meet
+                                Our Staff</a></li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
+                                href="reviews.html">Reviews</a>
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="contact.html">Contact</a></li>
@@ -275,7 +282,13 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script>
-        new WOW().init();
+        new WOW({
+            boxClass: 'wow', // default
+            animateClass: 'animated', // default
+            offset: 0, // default
+            mobile: false, // default
+            live: true // default
+        }).init();
     </script>
     <script src="js/main.js"></script>
 </body>
