--- a/index.html
+++ b/index.html
@@ -319,43 +319,43 @@
           </div>
           <div class="main__information_box_second">
             <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check wow wow fadeIn" data-wow-duration="3s"></i>
+              <i class="main__information_box_second_block_icon fas fa-check wow  fadeIn" data-wow-duration="3s"></i>
               <p class="main__information_box_second_block_p">Quality courses known throughout the world</p>
             </div>
           </div>
           <div class="main__information_box_second">
             <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check wow wow fadeIn" data-wow-duration="3s"></i>
+              <i class="main__information_box_second_block_icon fas fa-check wow  fadeIn" data-wow-duration="3s"></i>
               <p class="main__information_box_second_block_p">Accredited by specialist UK ELT Awarding Body</p>
             </div>
           </div>
           <div class="main__information_box_second">
             <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check wow wow fadeIn" data-wow-duration="3s"></i>
+              <i class="main__information_box_second_block_icon fas fa-check wow  fadeIn" data-wow-duration="3s"></i>
               <p class="main__information_box_second_block_p">Online/onsite TEFL courses with teaching practice</p>
             </div>
           </div>
           <div class="main__information_box_second">
             <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check wow wow fadeIn" data-wow-duration="3s"></i>
+              <i class="main__information_box_second_block_icon fas fa-check wow  fadeIn" data-wow-duration="3s"></i>
               <p class="main__information_box_second_block_p">Worldwide network of INTESOL branches</p>
             </div>
           </div>
           <div class="main__information_box_second">
             <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check wow wow fadeIn" data-wow-duration="3s"></i>
+              <i class="main__information_box_second_block_icon fas fa-check wow fadeIn" data-wow-duration="3s"></i>
               <p class="main__information_box_second_block_p">Network of verified TEFL job contacts</p>
             </div>
           </div>
           <div class="main__information_box_second">
             <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check wow wow fadeIn" data-wow-duration="3s"></i>
+              <i class="main__information_box_second_block_icon fas fa-check wow fadeIn" data-wow-duration="3s"></i>
               <p class="main__information_box_second_block_p">Flexible study options</p>
             </div>
           </div>
           <div class="main__information_box_second">
             <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check wow wow fadeIn" data-wow-duration="3s"></i>
+              <i class="main__information_box_second_block_icon fas fa-check wow fadeIn" data-wow-duration="3s"></i>
               <p class="main__information_box_second_block_p">Team of highly qualified TESOL instructors</p>
             </div>
           </div>
