--- a/staff.html
+++ b/staff.html
@@ -73,7 +73,7 @@
             </div>
         </div>
 
-        <div class="header__fon_img text-center">
+        <div class="header__fon_img text-center wow slideInRight" data-wow-duration="1s">
             <h1 class="header__fon_img_h1">INTESOL Staff Worldwide</h1>
         </div>
 
@@ -381,10 +381,10 @@
                     </div>
                 </div>
             </div>
-            <button class="footer__block_box_button"><a class="footer__block_box_button_link"
+            <button class="footer__block_box_button wow fadeInRightBig" data-wow-duration="2s"><a class="footer__block_box_button_link"
                     href="contact.html">Contact Us</a><i
                     class="footer__block_box_button_icon fas fa-arrow-right"></i></button>
-            <div class="footer__block_img">
+            <div class="footer__block_img wow rotateIn" data-wow-duration="3s">
                 <img class="footer__block_img_logo" src="img/logo2.png" alt="">
             </div>
             <div class="footer__block_icon d-flex">
@@ -399,7 +399,7 @@
                 </div>
             </div>
         </div>
-        <div class="footer__menu">
+        <div class="footer__menu wow zoomInDown" data-wow-duration="2s">
             <div class="container">
                 <nav class="footer__menu_nav">
                     <ul class="footer__menu_nav_ul d-flex justify-content-around flex-wrap">
@@ -436,36 +436,6 @@
             </div>
         </div>
     </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     <script src="js/jquery.js"></script>
