animation reviews page

--- a/contact.html
+++ b/contact.html
@@ -72,9 +72,9 @@
                 </nav>
             </div>
         </div>
-        <div class="header__fon wow bounceIn" data-wow-duration="2s">
+        <div class="header__fon">
             <div class="container text-center">
-                <div class="row row-ml justify-content-center">
+                <div class="row row-ml justify-content-center wow bounceIn" data-wow-duration="2s">
                     <div class="col-lg-8 col-md-10 col-sm-12 col-12 col-pd">
                         <p class="header__fon_p">Helping Students Since 1993</p>
                         <h1 class="header__fon_h1">TESOL Courses – Accredited<br>TESOL/TEFL Certificates</h1>
@@ -231,45 +231,6 @@
             </div>
         </div>
     </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
