added new page our partners

--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,9 @@
                                     <a class="header_nav-link" href="#">Accreditation</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="header_nav-link" href="partners.html">Our partners</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="header_nav-link" href="staff.html">Meet Our Staff</a>
                                 </li>
                                 <li class="nav-item">
@@ -208,6 +211,8 @@
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="#">Accreditation</a></li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="partners.html">Our
+                                partners</a></li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="staff.html">Meet
                                 Our Staff</a></li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
