--- a/reviews.html
+++ b/reviews.html
@@ -55,6 +55,9 @@
                                     <a class="header_nav-link" href="#">Accreditation</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="header_nav-link" href="partners.html">Our partners</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="header_nav-link" href="staff.html">Meet Our Staff</a>
                                 </li>
                                 <li class="nav-item">
@@ -374,8 +377,8 @@
                     </div>
                 </div>
             </div>
-            <button class="footer__block_box_button wow fadeInRightBig" data-wow-duration="2s"><a class="footer__block_box_button_link"
-                    href="contact.html">Contact Us</a><i
+            <button class="footer__block_box_button wow fadeInRightBig" data-wow-duration="2s"><a
+                    class="footer__block_box_button_link" href="contact.html">Contact Us</a><i
                     class="footer__block_box_button_icon fas fa-arrow-right"></i></button>
             <div class="footer__block_img wow rotateIn" data-wow-duration="3s">
                 <img class="footer__block_img_logo" src="img/logo2.png" alt="">
@@ -396,17 +399,23 @@
             <div class="container">
                 <nav class="footer__menu_nav">
                     <ul class="footer__menu_nav_ul d-flex justify-content-around flex-wrap">
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="index.html">Home</a></li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
+                                href="index.html">Home</a></li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Courses</a>
                         </li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="TeflJobs.html">TEFL Jobs</a>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
+                                href="TeflJobs.html">TEFL Jobs</a>
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">About</a>
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="#">Accreditation</a></li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="staff.html">Meet Our Staff</a></li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="reviews.html">Reviews</a>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="partners.html">Our
+                                partners</a></li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="staff.html">Meet
+                                Our Staff</a></li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
+                                href="reviews.html">Reviews</a>
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="contact.html">Contact</a>
