--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                   <a class="header_nav-link" href="#">Accreditation</a>
                 </li>
                 <li class="nav-item">
+                  <a class="header_nav-link" href="partners.html">Our partners</a>
+                </li>
+                <li class="nav-item">
                   <a class="header_nav-link" href="staff.html">Meet Our Staff</a>
                 </li>
                 <li class="nav-item">
@@ -452,6 +455,7 @@
             </li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">About</a></li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Accreditation</a></li>
+            <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="partners.html">Our partners</a></li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Meet Our Staff</a></li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="reviews.html">Reviews</a>
             </li>
