--- a/staff.html
+++ b/staff.html
@@ -55,6 +55,9 @@
                                     <a class="header_nav-link" href="#">Accreditation</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="header_nav-link" href="partners.html">Our partners</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="header_nav-link" href="#">Meet Our Staff</a>
                                 </li>
                                 <li class="nav-item">
@@ -381,8 +384,8 @@
                     </div>
                 </div>
             </div>
-            <button class="footer__block_box_button wow fadeInRightBig" data-wow-duration="2s"><a class="footer__block_box_button_link"
-                    href="contact.html">Contact Us</a><i
+            <button class="footer__block_box_button wow fadeInRightBig" data-wow-duration="2s"><a
+                    class="footer__block_box_button_link" href="contact.html">Contact Us</a><i
                     class="footer__block_box_button_icon fas fa-arrow-right"></i></button>
             <div class="footer__block_img wow rotateIn" data-wow-duration="3s">
                 <img class="footer__block_img_logo" src="img/logo2.png" alt="">
@@ -412,6 +415,8 @@
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="#">Accreditation</a></li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="partners.html">Our
+                                partners</a></li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Meet Our
                                 Staff</a></li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
