--- a/contact.html
+++ b/contact.html
@@ -220,7 +220,7 @@
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="contact.html">Contact</a></li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Terms &
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="terms.html">Terms &
                                 Conditions</a>
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Privacy
