--- a/staff.html
+++ b/staff.html
@@ -424,7 +424,7 @@
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="contact.html">Contact</a>
                         </li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Terms &
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="terms.html">Terms &
                                 Conditions</a>
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Privacy
