--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
             </li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="terms.html">Terms & Conditions</a>
             </li>
-            <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Privacy Policy</a></li>
+            <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="privacy.html">Privacy Policy</a></li>
           </ul>
         </nav>
       </div>
