--- a/terms.html
+++ b/terms.html
@@ -330,7 +330,7 @@
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="terms.html">Terms & Conditions</a>
                         </li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Privacy
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="privacy.html">Privacy
                                 Policy</a></li>
                     </ul>
                 </nav>
