new page worldwide

--- a/reviews.html
+++ b/reviews.html
@@ -45,7 +45,7 @@
                                         About
                                     </a>
                                     <ul class="dropdown-menu header__dropdown" aria-labelledby="navbarDropdown">
-                                        <li><a class="dropdown-item" href="#">About INTESOL Worldwide</a></li>
+                                        <li><a class="dropdown-item" href="worldwide.html">About INTESOL Worldwide</a></li>
                                         <li><a class="dropdown-item" href="#">INTESOL Centres Around the World</a></li>
                                         <li><a class="dropdown-item" href="#">INTESOL Staff Worldwide</a></li>
                                         <li><a class="dropdown-item" href="#">INTESOL Franchise Opportunities</a></li>
@@ -406,7 +406,7 @@
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="TeflJobs.html">TEFL Jobs</a>
                         </li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">About</a>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="worldwide.html">About</a>
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="#">Accreditation</a></li>
