--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     About
                   </a>
                   <ul class="dropdown-menu header__dropdown" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#">About INTESOL Worldwide</a></li>
+                    <li><a class="dropdown-item" href="worldwide.html">About INTESOL Worldwide</a></li>
                     <li><a class="dropdown-item" href="#">INTESOL Centres Around the World</a></li>
                     <li><a class="dropdown-item" href="#">INTESOL Staff Worldwide</a></li>
                     <li><a class="dropdown-item" href="#">INTESOL Franchise Opportunities</a></li>
@@ -453,7 +453,7 @@
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Courses</a></li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="TeflJobs.html">TEFL Jobs</a>
             </li>
-            <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">About</a></li>
+            <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="worldwide.html">About</a></li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Accreditation</a></li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="partners.html">Our partners</a></li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="staff.html">Meet Our Staff</a></li>
