--- a/partners.html
+++ b/partners.html
@@ -47,7 +47,7 @@
                                         About
                                     </a>
                                     <ul class="dropdown-menu header__dropdown" aria-labelledby="navbarDropdown">
-                                        <li><a class="dropdown-item" href="#">About INTESOL Worldwide</a></li>
+                                        <li><a class="dropdown-item" href="worldwide.html">About INTESOL Worldwide</a></li>
                                         <li><a class="dropdown-item" href="#">INTESOL Centres Around the World</a></li>
                                         <li><a class="dropdown-item" href="#">INTESOL Staff Worldwide</a></li>
                                         <li><a class="dropdown-item" href="#">INTESOL Franchise Opportunities</a></li>
