--- a/contact.html
+++ b/contact.html
@@ -47,8 +47,7 @@
                                     <ul class="dropdown-menu header__dropdown" aria-labelledby="navbarDropdown">
                                         <li><a class="dropdown-item" href="worldwide.html">About INTESOL Worldwide</a></li>
                                         <li><a class="dropdown-item" href="#">INTESOL Centres Around the World</a></li>
-                                        <li><a class="dropdown-item" href="#">INTESOL Staff Worldwide</a></li>
-                                        <li><a class="dropdown-item" href="#">INTESOL Franchise Opportunities</a></li>
+                                        <li><a class="dropdown-item" href="Franchise.html">INTESOL Franchise Opportunities</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item">
