--- a/worldwide.html
+++ b/worldwide.html
@@ -48,8 +48,7 @@
                                         <li><a class="dropdown-item" href="worldwide.html">About INTESOL Worldwide</a>
                                         </li>
                                         <li><a class="dropdown-item" href="#">INTESOL Centres Around the World</a></li>
-                                        <li><a class="dropdown-item" href="#">INTESOL Staff Worldwide</a></li>
-                                        <li><a class="dropdown-item" href="#">INTESOL Franchise Opportunities</a></li>
+                                        <li><a class="dropdown-item" href="Franchise.html">INTESOL Franchise Opportunities</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item">
