--- a/contact.html
+++ b/contact.html
@@ -45,9 +45,12 @@
                                         About
                                     </a>
                                     <ul class="dropdown-menu header__dropdown" aria-labelledby="navbarDropdown">
-                                        <li><a class="dropdown-item" href="worldwide.html">About INTESOL Worldwide</a></li>
-                                        <li><a class="dropdown-item" href="centr.html">INTESOL Centres Around the World</a></li>
-                                        <li><a class="dropdown-item" href="Franchise.html">INTESOL Franchise Opportunities</a></li>
+                                        <li><a class="dropdown-item" href="worldwide.html">About INTESOL Worldwide</a>
+                                        </li>
+                                        <li><a class="dropdown-item" href="centr.html">INTESOL Centres Around the
+                                                World</a></li>
+                                        <li><a class="dropdown-item" href="Franchise.html">INTESOL Franchise
+                                                Opportunities</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item">
@@ -81,6 +84,11 @@
                     </div>
                 </div>
             </div>
+            <svg class="hader__wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#fff" fill-opacity="1"
+                    d="M0,256L24,240C48,224,96,192,144,192C192,192,240,224,288,245.3C336,267,384,277,432,240C480,203,528,117,576,117.3C624,117,672,203,720,224C768,245,816,203,864,160C912,117,960,75,1008,101.3C1056,128,1104,224,1152,256C1200,288,1248,256,1296,224C1344,192,1392,160,1416,144L1440,128L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z">
+                </path>
+            </svg>
         </div>
     </header>
 
@@ -203,11 +211,13 @@
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="TeflJobs.html">TEFL Jobs</a>
                         </li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="worldwide.html">About</a>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
+                                href="worldwide.html">About</a>
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="#">Accreditation</a></li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="partners.html">Our
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
+                                href="partners.html">Our
                                 partners</a></li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="staff.html">Meet
                                 Our Staff</a></li>
@@ -216,10 +226,12 @@
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="contact.html">Contact</a></li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="terms.html">Terms &
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
+                                href="terms.html">Terms &
                                 Conditions</a>
                         </li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="privacy.html">Privacy
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
+                                href="privacy.html">Privacy
                                 Policy</a></li>
                     </ul>
                 </nav>
@@ -231,6 +243,11 @@
                     Office 27 Chestnut Close, Middlewich, Cheshire, CW10 9QJ, United Kingdom</p>
             </div>
         </div>
+        <svg class="footer__wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#fff" fill-opacity="1"
+              d="M0,256L24,240C48,224,96,192,144,192C192,192,240,224,288,245.3C336,267,384,277,432,240C480,203,528,117,576,117.3C624,117,672,203,720,224C768,245,816,203,864,160C912,117,960,75,1008,101.3C1056,128,1104,224,1152,256C1200,288,1248,256,1296,224C1344,192,1392,160,1416,144L1440,128L1440,0L1416,0C1392,0,1344,0,1296,0C1248,0,1200,0,1152,0C1104,0,1056,0,1008,0C960,0,912,0,864,0C816,0,768,0,720,0C672,0,624,0,576,0C528,0,480,0,432,0C384,0,336,0,288,0C240,0,192,0,144,0C96,0,48,0,24,0L0,0Z">
+            </path>
+          </svg>
     </footer>
 
 
