--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/loader.css">
   <link rel="stylesheet" href="fontawesome-free-5.15.3-web/css/all.min.css">
   <link rel="stylesheet" href="css/font.css">
   <link rel="icon" href="img/logo2.png">
 </head>
 
 <body>
-  <header>
+  <div class="container__loader">
+    <div class="loader"><span></span></div>
+  </div>
+  <header class="header">
     <div class="header__menu">
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light">
