--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </head>
 
 <body>
-  <div class="container__loader">
+  <!-- <div class="container__loader">
     <div class="loader"><span></span></div>
-  </div>
+  </div> -->
   <header class="header">
     <div class="header__menu">
       <div class="container">
