changed disegn site

--- a/TeflJobs.html
+++ b/TeflJobs.html
@@ -45,9 +45,12 @@
                                         About
                                     </a>
                                     <ul class="dropdown-menu header__dropdown" aria-labelledby="navbarDropdown">
-                                        <li><a class="dropdown-item" href="worldwide.html">About INTESOL Worldwide</a></li>
-                                        <li><a class="dropdown-item" href="centr.html">INTESOL Centres Around the World</a></li>
-                                        <li><a class="dropdown-item" href="Franchise.html">INTESOL Franchise Opportunities</a></li>
+                                        <li><a class="dropdown-item" href="worldwide.html">About INTESOL Worldwide</a>
+                                        </li>
+                                        <li><a class="dropdown-item" href="centr.html">INTESOL Centres Around the
+                                                World</a></li>
+                                        <li><a class="dropdown-item" href="Franchise.html">INTESOL Franchise
+                                                Opportunities</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item">
@@ -238,10 +241,13 @@
             </div>
             <div class="footer__block_icon d-flex">
                 <div class="instagram">
-                    <a class="instagram_link" href="#"><i class="fab fa-instagram"></i></a>
+                    <a class="instagram_link" href="https://www.instagram.com/tesolasia.international/"><i
+                            class="fab fa-instagram"></i></a>
                 </div>
                 <div class="facebook">
-                    <a class="facebook_link" href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a class="facebook_link"
+                        href="https://m.facebook.com/TESOLAsiaUzbekistan/manager/?notif_t=page_user_activity&notif_id=1632165991742892&ref=m_notif"><i
+                            class="fab fa-facebook-f"></i></a>
                 </div>
                 <div class="telegram">
                     <a class="telegram_link" href="https://t.me/TesolAsiauz"><i class="fab fa-telegram-plane"></i></a>
@@ -252,29 +258,35 @@
             <div class="container">
                 <nav class="footer__menu_nav">
                     <ul class="footer__menu_nav_ul d-flex justify-content-around flex-wrap">
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
-                                href="index.html">Home</a></li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Home</a></li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Courses</a>
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
-                                href="TeflJobs.html">TEFL Jobs</a></li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="worldwide.html">About</a>
+                                href="TeflJobs.html">TEFL Jobs</a>
+                        </li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
+                                href="worldwide.html">About</a>
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="#">Accreditation</a></li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="partners.html">Our
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
+                                href="partners.html">Our
                                 partners</a></li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="staff.html">Meet
-                                Our Staff</a></li>
+                                Our
+                                Staff</a></li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
-                                href="reviews.html">Reviews</a></li>
+                                href="reviews.html">Reviews</a>
+                        </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="contact.html">Contact</a>
                         </li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="terms.html">Terms &
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
+                                href="terms.html">Terms &
                                 Conditions</a>
                         </li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="privacy.html">Privacy
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
+                                href="privacy.html">Privacy
                                 Policy</a></li>
                     </ul>
                 </nav>
@@ -287,26 +299,9 @@
                     Chestnut Close, Middlewich, Cheshire, CW10 9QJ, United Kingdom</p>
             </div>
         </div>
+        </svg>
+        </svg>
     </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
