--- a/centr.html
+++ b/centr.html
@@ -271,10 +271,13 @@
             </div>
             <div class="footer__block_icon d-flex">
                 <div class="instagram">
-                    <a class="instagram_link" href="#"><i class="fab fa-instagram"></i></a>
+                    <a class="instagram_link" href="https://www.instagram.com/tesolasia.international/"><i
+                            class="fab fa-instagram"></i></a>
                 </div>
                 <div class="facebook">
-                    <a class="facebook_link" href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a class="facebook_link"
+                        href="https://m.facebook.com/TESOLAsiaUzbekistan/manager/?notif_t=page_user_activity&notif_id=1632165991742892&ref=m_notif"><i
+                            class="fab fa-facebook-f"></i></a>
                 </div>
                 <div class="telegram">
                     <a class="telegram_link" href="https://t.me/TesolAsiauz"><i class="fab fa-telegram-plane"></i></a>
@@ -289,7 +292,8 @@
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Courses</a>
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
-                                href="TeflJobs.html">TEFL Jobs</a></li>
+                                href="TeflJobs.html">TEFL Jobs</a>
+                        </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="worldwide.html">About</a>
                         </li>
@@ -298,10 +302,12 @@
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="partners.html">Our
                                 partners</a></li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Meet Our
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="staff.html">Meet
+                                Our
                                 Staff</a></li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
-                                href="reviews.html">Reviews</a></li>
+                                href="reviews.html">Reviews</a>
+                        </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="contact.html">Contact</a>
                         </li>
@@ -323,23 +329,8 @@
                     Chestnut Close, Middlewich, Cheshire, CW10 9QJ, United Kingdom</p>
             </div>
         </div>
+        </svg>
     </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     <script src="js/jquery.js"></script>
