--- a/reviews.html
+++ b/reviews.html
@@ -363,76 +363,69 @@
 
     <footer class="footer__block">
         <div class="container text-center">
-            <div class="row row-ml justify-content-center">
-                <div class="col-lg-7 col-md-10 col-12 col-pd">
-                    <div class="footer__block_box">
-                        <span class="footer__block_box_span">START YOUR TEFL/TESOL JOURNEY HERE
-                            TAKE ADVANTAGE OF OUR SPECIAL OFFER
-                            GET YOURSELF ON A TEFL/TESOL COURSE</span>
-                        <h1 class="footer__block_box_h1">Ready For a Change? Just Do It!</h1>
-                    </div>
-                </div>
+          <div class="row row-ml justify-content-center">
+            <div class="col-lg-7 col-md-10 col-12 col-pd">
+              <div class="footer__block_box">
+                <span class="footer__block_box_span">START YOUR TEFL/TESOL JOURNEY HERE
+                  TAKE ADVANTAGE OF OUR SPECIAL OFFER
+                  GET YOURSELF ON A TEFL/TESOL COURSE</span>
+                <h1 class="footer__block_box_h1">Ready For a Change? Just Do It!</h1>
+              </div>
             </div>
-            <button class="footer__block_box_button wow fadeInRightBig" data-wow-duration="2s"><a
-                    class="footer__block_box_button_link" href="contact.html">Contact Us</a><i
-                    class="footer__block_box_button_icon fas fa-arrow-right"></i></button>
-            <div class="footer__block_img wow rotateIn" data-wow-duration="3s">
-                <img class="footer__block_img_logo" src="img/logo2.png" alt="">
+          </div>
+          <button class="footer__block_box_button wow fadeInRightBig" data-wow-duration="2s"><a
+              class="footer__block_box_button_link" href="contact.html">Contact Us</a><i
+              class="footer__block_box_button_icon fas fa-arrow-right"></i></button>
+          <div class="footer__block_img wow rotateIn" data-wow-duration="3s">
+            <img class="footer__block_img_logo" src="img/logo2.png" alt="">
+          </div>
+          <div class="footer__block_icon d-flex">
+            <div class="instagram">
+              <a class="instagram_link" href="https://www.instagram.com/tesolasia.international/"><i class="fab fa-instagram"></i></a>
             </div>
-            <div class="footer__block_icon d-flex">
-                <div class="instagram">
-                    <a class="instagram_link" href="#"><i class="fab fa-instagram"></i></a>
-                </div>
-                <div class="facebook">
-                    <a class="facebook_link" href="#"><i class="fab fa-facebook-f"></i></a>
-                </div>
-                <div class="telegram">
-                    <a class="telegram_link" href="https://t.me/TesolAsiauz"><i class="fab fa-telegram-plane"></i></a>
-                </div>
+            <div class="facebook">
+              <a class="facebook_link" href="https://m.facebook.com/TESOLAsiaUzbekistan/manager/?notif_t=page_user_activity&notif_id=1632165991742892&ref=m_notif"><i class="fab fa-facebook-f"></i></a>
             </div>
+            <div class="telegram">
+              <a class="telegram_link" href="https://t.me/TesolAsiauz"><i class="fab fa-telegram-plane"></i></a>
+            </div>
+          </div>
         </div>
         <div class="footer__menu wow zoomInDown" data-wow-duration="2s">
-            <div class="container">
-                <nav class="footer__menu_nav">
-                    <ul class="footer__menu_nav_ul d-flex justify-content-around flex-wrap">
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
-                                href="index.html">Home</a></li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Courses</a>
-                        </li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
-                                href="TeflJobs.html">TEFL Jobs</a>
-                        </li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="worldwide.html">About</a>
-                        </li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
-                                href="#">Accreditation</a></li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="partners.html">Our
-                                partners</a></li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="staff.html">Meet
-                                Our Staff</a></li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
-                                href="reviews.html">Reviews</a>
-                        </li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
-                                href="contact.html">Contact</a>
-                        </li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="terms.html">Terms &
-                                Conditions</a>
-                        </li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="privacy.html">Privacy
-                                Policy</a></li>
-                    </ul>
-                </nav>
-            </div>
+          <div class="container">
+            <nav class="footer__menu_nav">
+              <ul class="footer__menu_nav_ul d-flex justify-content-around flex-wrap">
+                <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Home</a></li>
+                <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Courses</a></li>
+                <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="TeflJobs.html">TEFL Jobs</a>
+                </li>
+                <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="worldwide.html">About</a>
+                </li>
+                <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Accreditation</a></li>
+                <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="partners.html">Our
+                    partners</a></li>
+                <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="staff.html">Meet Our
+                    Staff</a></li>
+                <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="reviews.html">Reviews</a>
+                </li>
+                <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="contact.html">Contact</a>
+                </li>
+                <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="terms.html">Terms &
+                    Conditions</a>
+                </li>
+                <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="privacy.html">Privacy
+                    Policy</a></li>
+              </ul>
+            </nav>
+          </div>
         </div>
         <div class="footer__lastBox">
-            <div class="container">
-                <p class="footer__lastBox_p">&COPY; Copyright - INTESOL Worldwide Ltd. All rights reserved. Admissions
-                    Office 27
-                    Chestnut Close, Middlewich, Cheshire, CW10 9QJ, United Kingdom</p>
-            </div>
+          <div class="container">
+            <p class="footer__lastBox_p">&COPY; Copyright - INTESOL Worldwide Ltd. All rights reserved. Admissions Office 27
+              Chestnut Close, Middlewich, Cheshire, CW10 9QJ, United Kingdom</p>
+          </div>
         </div>
-    </footer>
+      </footer>
 
 
 
