--- a/index.html
+++ b/index.html
@@ -88,11 +88,7 @@
           </div>
         </div>
       </div>
-      <svg class="hader__wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#fff" fill-opacity="1"
-          d="M0,256L24,240C48,224,96,192,144,192C192,192,240,224,288,245.3C336,267,384,277,432,240C480,203,528,117,576,117.3C624,117,672,203,720,224C768,245,816,203,864,160C912,117,960,75,1008,101.3C1056,128,1104,224,1152,256C1200,288,1248,256,1296,224C1344,192,1392,160,1416,144L1440,128L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z">
-        </path>
-      </svg>
+      <svg class="hader__wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,160L80,170.7C160,181,320,203,480,181.3C640,160,800,96,960,85.3C1120,75,1280,117,1360,138.7L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
     </div>
   </header>
 
@@ -156,7 +152,7 @@
               <span class="main__courses-box_first_span">Certificate in TEFL</span>
             </div>
             <div class="main__courses-box_second">
-              <p class="main__courses-box_second_p"><sup class="sup">GPB</sup>175</p>
+              <p class="main__courses-box_second_p"><sup class="sup"></sup></p>
             </div>
             <div class="main__courses-box_thirst">
               <ul>
@@ -180,7 +176,7 @@
               <span class="main__courses-box_first_span">Certificate in TEFL</span>
             </div>
             <div class="main__courses-box_second">
-              <p class="main__courses-box_second_p"><sup class="sup">GPB</sup>175</p>
+              <p class="main__courses-box_second_p"><sup class="sup"></sup></p>
             </div>
             <div class="main__courses-box_thirst">
               <ul>
@@ -204,7 +200,7 @@
               <span class="main__courses-box_first_span">Certificate in TEFL</span>
             </div>
             <div class="main__courses-box_second">
-              <p class="main__courses-box_second_p"><sup class="sup">GPB</sup>175</p>
+              <p class="main__courses-box_second_p"><sup class="sup"></sup></p>
             </div>
             <div class="main__courses-box_thirst">
               <ul>
@@ -228,7 +224,7 @@
               <span class="main__courses-box_first_span">Certificate in TEFL</span>
             </div>
             <div class="main__courses-box_second">
-              <p class="main__courses-box_second_p"><sup class="sup">GPB</sup>275</p>
+              <p class="main__courses-box_second_p"><sup class="sup"></sup></p>
             </div>
             <div class="main__courses-box_thirst">
               <ul>
@@ -252,7 +248,7 @@
               <span class="main__courses-box_first_span">Certificate in TEFL</span>
             </div>
             <div class="main__courses-box_second">
-              <p class="main__courses-box_second_p"><sup class="sup">GPB</sup>275</p>
+              <p class="main__courses-box_second_p"><sup class="sup"></sup></p>
             </div>
             <div class="main__courses-box_thirst">
               <ul>
@@ -276,7 +272,7 @@
               <span class="main__courses-box_first_span">Certificate in TEFL</span>
             </div>
             <div class="main__courses-box_second">
-              <p class="main__courses-box_second_p"><sup class="sup">GPB</sup>275</p>
+              <p class="main__courses-box_second_p"><sup class="sup"></sup></p>
             </div>
             <div class="main__courses-box_thirst">
               <ul>
@@ -440,10 +436,10 @@
       </div>
       <div class="footer__block_icon d-flex">
         <div class="instagram">
-          <a class="instagram_link" href="#"><i class="fab fa-instagram"></i></a>
+          <a class="instagram_link" href="https://www.instagram.com/tesolasia.international/"><i class="fab fa-instagram"></i></a>
         </div>
         <div class="facebook">
-          <a class="facebook_link" href="#"><i class="fab fa-facebook-f"></i></a>
+          <a class="facebook_link" href="https://m.facebook.com/TESOLAsiaUzbekistan/manager/?notif_t=page_user_activity&notif_id=1632165991742892&ref=m_notif"><i class="fab fa-facebook-f"></i></a>
         </div>
         <div class="telegram">
           <a class="telegram_link" href="https://t.me/TesolAsiauz"><i class="fab fa-telegram-plane"></i></a>
@@ -484,10 +480,7 @@
           Chestnut Close, Middlewich, Cheshire, CW10 9QJ, United Kingdom</p>
       </div>
     </div>
-    <svg class="footer__wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path fill="#fff" fill-opacity="1"
-        d="M0,256L24,240C48,224,96,192,144,192C192,192,240,224,288,245.3C336,267,384,277,432,240C480,203,528,117,576,117.3C624,117,672,203,720,224C768,245,816,203,864,160C912,117,960,75,1008,101.3C1056,128,1104,224,1152,256C1200,288,1248,256,1296,224C1344,192,1392,160,1416,144L1440,128L1440,0L1416,0C1392,0,1344,0,1296,0C1248,0,1200,0,1152,0C1104,0,1056,0,1008,0C960,0,912,0,864,0C816,0,768,0,720,0C672,0,624,0,576,0C528,0,480,0,432,0C384,0,336,0,288,0C240,0,192,0,144,0C96,0,48,0,24,0L0,0Z">
-      </path>
+    <svg class="footer__wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,128L80,149.3C160,171,320,213,480,213.3C640,213,800,171,960,138.7C1120,107,1280,85,1360,74.7L1440,64L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path></svg>
     </svg>
   </footer>
 
